# polygon

./: .gitignore  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md
benches/: predicate.rs  predicate_gungraun.rs
examples/: zipcode_join.rs  zipcode_join_gpu.rs
scripts/: fetch_data.sh
src/: gpu.rs  lib.rs  pip.metal  simd.rs
