[package]
name = "polygon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arrow-array = "58.1.0"
geo = "0.33.1"
geo-traits = "0.3.0"
geo-types = "0.7.19"
geoarrow = "0.8.0"
geoparquet = "0.8.0"
parquet = { version = "58.1.0", features = ["arrow"] }
rayon = "1.12.0"
rstar = "0.12.2"

[profile.release]
debug = "line-tables-only"
